# leetcode-fun

./: .gitattributes  .gitignore  LICENSE  README.md  Taskfile.yml  approach.md  approach_ideas.md  cli.py  env.py  leetcode-fun.code-workspace  main.py  poc.py  potentialpwd.txt  pyproject.toml
.devcontainer/: devcontainer copy.json  devcontainer.json
docs/notes/: cheatsheet_ideas.md  leetcode_approach.md  my_tools.md  root.md  workflow.md
learning/: cheatsheet.py  cli.py
learning/approach/: 5-steps.md  problem-groups.md
learning/data_scraper/: app.py
learning/insights/: approach_idea1.md  cache.md  data_structure_groups.md  data_structures_groups2.md  double_linked_list.md  edge_case_start.md  math_language.md  problem_groups.md  psb1.md  psb_philosophy.md  recusion.md  think_vs_do.md
learning/math_writing/: TTToolkit.md
notes/: agents.md  haskell_summary.md  pipe.md
notes/cache/: python.md
notes/debugging/: python_methods.md
notes/extra_problems/: ideas.md
notes/ideas/: fn_in_fn.md  reduce.md  tools.md
notes/interviewing/: realpython.md
notes/logging/: logging.md
notes/patterns/: higher_order_functions.md
notes/software_creation/: ycomb.md
problems/add_two_nums/: add_two_nums.py
problems/count_primes/: COUNT_PRIMES.md  count_primes.py
problems/dup/: contains_duplicate.md  dup.py
problems/merge_strings/: cli.py  merge_str.py  merge_strings.md
problems/merge_two_lists/: mtl.py  scratch.ipynb
problems/valid_parens/: vp2.py  (+1 more)
tests/: test_two_sums.py
tools/: TwoSumSolutionProcessDescription.md
two_sums/: two_sums.md  two_sums.py
(+25 files in other folders)
