[project]
name = "leetcode-fun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "duckdb>=1.3.2",
    "inquirerpy>=0.3.4",
    "jason>=0.1.7",
    "marimo>=0.16.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "pytest>=8.4.2",
    "rich>=14.1.0",
    "tinydb>=4.8.2",
    "typer>=0.17.4",
]
