[project]
name = "leetcode-fun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "duckdb>=1.3.2",
    "inquirerpy>=0.3.4",
    "ipdb>=0.13.13",
    "jason>=0.1.7",
    "loguru>=0.7.3",
    "marimo>=0.16.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pdbpp>=0.11.7",
    "polars>=1.33.1",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
    "results>=1.4.0",
    "rich>=14.1.0",
    "structlog>=25.4.0",
    "tinydb>=4.8.2",
    "typer>=0.17.4",
]
